# geany-colorizer

./: .gitignore  Makefile.am  colorizer.c  colorizer.vala  colorizerui.c  colorizerui.vala  configure.ac  plugin.vala
vapi/: geany.vapi  scintilla.vapi
